--- a/index.html
+++ b/index.html
@@ -145,7 +145,51 @@
         <div class="text-center font-bold my-12">
           <h6 class="text-sm uppercase">services</h6>
           <h1 class=" text-5xl uppercase font-bebas neue">what we offer</h1>
-        </div>   
+        </div> 
+
+        <!-- border  -->
+        <div class="grid md:grid-cols-4 grid-rows-2 ">
+          <div class="border border-black my-8 p-5 w-60 ml-8 text-center">
+            <img class="h-16 w-16 ml-14 mb-4" src="images/icons/camera.png" alt="">
+            <h3 class="font-bold text-lg">movies director</h3>
+            <p class="text-sm">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+          </div>
+          <div class="border border-black my-8 p-5 w-60 ml-8 text-center">
+            <img class="h-16 w-16 ml-14 mb-4" src="images/icons/3d-glasss.png" alt="">
+            <h3 class="font-bold text-lg">3D MOVIES</h3>
+            <p class="text-sm">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+          </div>
+          <div class="border border-black my-8 p-5 w-60 ml-8 text-center">
+            <img class="h-16 w-16 ml-14 mb-4" src="images/icons/director-chair.png" alt="">
+            <h3 class="font-bold text-lg">Film maker</h3>
+            <p class="text-sm">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+          </div>
+          <div class="border border-black my-8 p-5 w-60 ml-8 text-center">
+            <img class="h-16 w-16 ml-14 mb-4" src="images/icons/theater.png" alt="">
+            <h3 class="font-bold text-lg">Drama Movies</h3>
+            <p class="text-sm">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+          </div>
+          <div class="border border-black my-8 p-5 w-60 ml-8 text-center">
+            <img class="h-16 w-16 ml-14 mb-4" src="images/icons/rim.png" alt="">
+            <h3 class="font-bold text-lg">Rolling Production</h3>
+            <p class="text-sm">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+          </div>
+          <div class="border border-black my-8 p-5 w-60 ml-8 text-center">
+            <img class="h-16 w-16 ml-14 mb-4" src="images/icons/cut-board.png" alt="">
+            <h3 class="font-bold text-lg">Movie Production</h3>
+            <p class="text-sm">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+          </div>
+          <div class="border border-black my-8 p-5 w-60 ml-8 text-center">
+            <img class="h-16 w-16 ml-14 mb-4" src="images/icons/count-down.png" alt="">
+            <h3 class="font-bold text-lg">actor action</h3>
+            <p class="text-sm">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+          </div>
+          <div class="border border-black my-8 p-5 w-60 ml-8 text-center">
+            <img class="h-16 w-16 ml-14 mb-4" src="images/icons/film.png" alt="">
+            <h3 class="font-bold text-lg">Studio Production</h3>
+            <p class="text-sm">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+          </div>
+        </div>  
       </section>
 
 
